Fix chat area not scrolling (#38)
* Send message on enter (#35) (#36)


* Make chat area scrollable

* Set scrollbar to bottom when new message added

---------

--- a/front-end/src/components/Chat.module.css
+++ b/front-end/src/components/Chat.module.css
@@ -34,4 +34,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	gap: 15px;
+
+	/* Add a scrollbar when the message list overflows */
+	overflow-y: auto;
 }
